...
                android:padding="0dp"
                android:text="Sign up"
                android:textColor="@color/white"
                android:textSize="10sp"
                android:textStyle="normal" />
            <android.widget.Button
                android:id="@+id/btn_welcome_login"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_bg"
...
