<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/provider_navigation_request"
        android:title="@string/provider_requests"
        android:icon="@drawable/requests"/>
    <item
        android:id="@+id/provider_navigation_services"
        android:title="@string/provider_services"
        android:icon="@drawable/services_icon"/>
    <item
        android:id="@+id/provider_navigation_appointments"
        android:title="Appointments"
        android:icon="@drawable/ic_alarm"/>
    <item
        android:id="@+id/provider_navigation_profile"
        android:title="@string/provider_profile"
        android:icon="@drawable/person_icon"/>

</menu>