<resources>
    <string name="app_name">Sell-It</string>
    <string name="app_welcome_msg">Welcome To Sell-It.</string>
    <string name="title_provider">Provider Sign Up.</string>
    <string name="email_error">Invalid email.</string>
    <string name="title_customer">Customer Sign up.</string>
    <string name="sign_provider">Provider Sign Up.</string>
    <string name="app_slogan">Discover, Request, Buy. Register as a provider and add services.  Register as customer and buy services.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user_name_error">User name too short</string>
    <string name="password_error">Passord too short</string>
    <string name="last_name_error">Last name too short</string>
    <string name="user_first_name_error">First name too short</string>
    <string name="phone_number_error">Phone number not valid</string>
    <string name="auth_error">Authentication Failed</string>
    <string name="provider_profile">Profile</string>
    <string name="provider_services">Services</string>
    <string name="provider_requests">Requests</string>
    <string name="add_category_submit_error">Server could not process your request</string>
    <string name="no_category_added_error">No Categories Added</string>
    <string name="add_service_error_msg">Request processing failed</string>
    <string name="add_service_succes_msg">Service added successfully</string>
    <string name="map_service_2_provider_empty_services_error_msg">No Services Found</string>
    <string-array name="boolean_values">
        <item>false</item>
        <item>true</item>
    </string-array>


</resources>